--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.0",
     "inquirer": "^8.2.0",
     "mongoose": "^6.2.1",
+    "nanospinner": "^1.0.0",
     "readline": "^1.3.0"
   }
 }
